force-app/main/default/objects/movedata__Movedata_Schema_Map__mdt/movedata__Movedata_Schema_Map__mdt.object-meta.xml
<CustomObject>
    <label>MoveData Schema Map</label>
    <pluralLabel>MoveData Schema Maps</pluralLabel>
</CustomObject>