force-app/main/default/objects/movedata__Movedata_Schema_Map__mdt/fields/movedata__Action__c.field-meta.xml
<CustomField>
    <fullName>movedata__Action__c</fullName>
    <label>Action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>