force-app/main/default/objects/movedata__Movedata_Schema_Map__mdt/fields/movedata__Handler__c.field-meta.xml
<CustomField>
    <fullName>movedata__Handler__c</fullName>
    <label>Handler</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>