force-app/main/default/objects/movedata__Movedata_Schema_Map__mdt/fields/movedata__Namespace__c.field-meta.xml
<CustomField>
    <fullName>movedata__Namespace__c</fullName>
    <label>Namespace</label>
    <length>100</length>
    <type>Text</type>
</CustomField>