force-app/main/default/objects/movedata__Movedata_Schema_Map__mdt/fields/movedata__Type__c.field-meta.xml
<CustomField>
    <fullName>movedata__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow</fullName>
                <default>true</default>
                <label>Flow</label>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Config</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>