force-app/main/default/objects/movedata__Movedata_Schema_Map__mdt/fields/movedata__Version__c.field-meta.xml
<CustomField>
    <fullName>movedata__Version__c</fullName>
    <label>Version</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>