force-app/main/default/objects/movedata__Movedata_Schema_Map__mdt/listViews/movedata__All.listView-meta.xml
<ListView>
    <fullName>movedata__All</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>NamespacePrefix</columns>
    <columns>movedata__Type__c</columns>
    <columns>movedata__Action__c</columns>
    <columns>movedata__Version__c</columns>
    <columns>movedata__Namespace__c</columns>
    <columns>movedata__Handler__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Metadata</label>
    <language>en_US</language>
</ListView>